@@ -1,5 +1,7 @@
 2005-11-17  Vincent Noel  <vincent.noel@gmail.com>
 
+	* logrtns.c (log_read_dates): Off-by-one error.
+
 	* calendar.c: (calendar_day_selected):
 	* log_repaint.c: (selection_changed_cb), (logview_unbold_rows),
 	(log_add_new_log_lines), (logview_scroll_and_focus_path),
